2017-05-11  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Use symbolic constant for TrueType interpreter v40.

	v40 is implemented meanwhile.

	* src/ftinspect.cpp (Engine::Engine, MainGUI::setDefaults): Use
	`TT_INTERPRETER_VERSION_40'.

2017-05-11  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Remove unneeded explicit array sizes.

	* src/ftinspect.cpp (Engine::Engine): Do it.

2017-05-11  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Make `ftcFaceID' conversion safe.

	* src/ftinspect.cpp: Include `stdint.h'.
	(faceRequester): Implement it.

2017-05-11  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Synchronize dpi, target, pxlMode types with FreeType.

	* src/ftinspect.h (Engine): Make `dpi' unsigned int.
	Make `loadFlags' unsigned long.
	(GlyphBitmap): Use `FT_Pixel_Mode' for `pixelMode' and constructor.

	* src/ftinspect.c: Include `cstdint', `cmath', `limits',
	`stdexcept', needed by forthcoming commits.
	(Engine::update, GlyphBitmap::GlyphBitmap, MainGUI::drawGlyph):
	Updated.

2017-05-11  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Change freetype2 include path to system include path.

	This avoids warnings.

	* src/ftinspect.pro: Do it.

2017-05-11  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Remove `const_cast'.

	* src/ftinspect.cpp (GlyphBitmap::paint): `const_cast' is
	potentially dangerous and should only be used as a last resort.
	Here, the mutable data can just be accessed with `.bits()' instead.

2017-05-11  Werner Lemberg  <wl@gnu.org>

	Fix clang warnings.

	* src/ftbench.c (main): Use cast.

	* src/ftview.c (N_LCD_IDXS): Cast to `int'.
	(usage, parse_cmdline): Updated.

2017-05-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Report fractional ppem for scalable fonts.

	* src/ftview.c (write_header): Updated, ppem and errors consolidated.

2017-05-08  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftview.c (write_header): Revert due to segmentation fault.
